Aggiornata la pagina delle impostazioni con un elenco delle personalizzazioni e rimosso il file delle impostazioni applicazione. Aggiunta classe CSS per il colore dei link.

--- a/API e Applicazioni/app-etir.html
+++ b/API e Applicazioni/app-etir.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
   <meta charset="UTF-8">
   <title>API</title>
   <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -21,21 +23,58 @@
           </a>
         </li>
         <li>
-          <a href="https://apps.apple.com/us/app/etir2/id6454934635"
-            target="_blank" rel="noopener noreferrer">
+          <a href="https://apps.apple.com/us/app/etir2/id6454934635" target="_blank" rel="noopener noreferrer">
             AppStore 🔗
           </a>
         </li>
-        <br/>
+        <br />
       </ul>
+
       <h2>Impostazioni</h2>
       <ul>
         <li><a href="percorso-archiviazione-app.html">Percorso archiviazione</a></li>
       </ul>
+
       <ul>
-        <li><a href="impostazioni-applicazione.html">Personalizzazioni app</a></li>
+        <li>
+          <span class="link-color-text">Elenco delle personalizzazioni</span>
+
+          <section>
+            <details>
+              <summary class="list-item-header">
+                <strong>NonMostraNumeroOrdineListaPoi</strong>
+                <em>10 Luglio 2025</em>
+              </summary>
+              <div class="card-body">
+                <p>Il numero dell'ordine dal quale si origina il poi non viene più mostrarto una volta attivata
+                  l'impostazione.</p>
+              </div>
+            </details>
+
+            <!-- <details>
+                <summary class="list-item-header">
+                    <strong>Impostazione 2:</strong>
+                    <em>10 Luglio 2025</em>
+                </summary>
+                <div class="card-body">
+                    <p>Descrizione della seconda impostazione.</p>
+                </div>
+            </details>
+
+            <details>
+                <summary class="list-item-header">
+                    <strong>Impostazione 3:</strong>
+                    <em>10 Luglio 2025</em>
+                </summary>
+                <div class="card-body">
+                    <p>Descrizione della terza impostazione.</p>
+                </div>
+            </details> -->
+          </section>
+        </li>
       </ul>
     </section>
   </div>
 </body>
+
 </html>
