--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,22 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-11</summary>
+
+        <div class="card">
+          <div class="card-title">Messo il numero assi nelle mappe</div>
+          <div class="card-body">
+
+            <section>
+              <p>Dato che il numero di assi fa la differenza nel pedaggio ora le mappe considerano il numero di assi per il caloclo del pedaggio</p>
+              <p>Ovviamente gli assi devono essere definiti in anagrafica</p>
+            </section>
+          </div>
+        </div>        
+
+      </details>
+
+      <details>
         <summary>2025-07-10</summary>
 
         <div class="card">
