--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,6 +21,21 @@
         <summary>2025-07-11</summary>
 
         <div class="card">
+          <div class="card-title">Controllo aziende</div>
+          <div class="card-body">
+
+            <section>
+              <p>Nelle anagrafiche aziende non si possono piu' inserire aziende con lo setesso codice (lettera)</p>
+            </section>
+          </div>
+        </div>        
+
+      </details>
+
+      <details>
+        <summary>2025-07-11</summary>
+
+        <div class="card">
           <div class="card-title">Messo il numero assi nelle mappe</div>
           <div class="card-body">
 
