Aggiornata la descrizione dell'impostazione "CONTROLLA DATA CARICO - DATA PARTENZA" e rimosso il commento per migliorare la chiarezza.

--- a/API e Applicazioni/app-etir.html
+++ b/API e Applicazioni/app-etir.html
@@ -51,17 +51,18 @@
               </div>
             </details>
 
-            <!-- <details>
+            <details>
                 <summary class="list-item-header">
-                    <strong>Impostazione 2:</strong>
+                    <strong>CONTROLLA DATA CARICO - DATA PARTENZA</strong>
                     <em>10 Luglio 2025</em>
                 </summary>
                 <div class="card-body">
-                    <p>Descrizione della seconda impostazione.</p>
+                    <p>attivare per Mostrare un avviso quando entro in un viaggio nel quale la data di partenza cade prima della data di carico<br>
+                    Questa impostazione si trova nelle impostazioni dei viaggi nella sezione Automatismi</p>
                 </div>
             </details>
 
-            <details>
+            <!-- <details>
                 <summary class="list-item-header">
                     <strong>Impostazione 3:</strong>
                     <em>10 Luglio 2025</em>
