--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,6 +17,23 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
+      <!-- Modifica ancora non rilasciata, non completata
+      <details open>
+        <summary>2025-07-16</summary>
+
+        <div class="card">
+          <div class="card-title">Centro di costo Verbali</div>
+          <div class="card-body">
+
+            <section>
+              <p>Inserito il centro di costo all'interno dei verbali, pensato per permettere l'ammortamento dei costi del verbale</p>
+            </section>
+
+            <img src="../assets/Veicoli/Verbali/CentroCostiPerVerbali.png" alt="CentroCostiPerVerbali" width="450px">
+          </div>
+        </div>        
+      </details> -->
+
       <details open>
         <summary>2025-07-11</summary>
 
