Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -34,7 +34,46 @@
         </div>        
       </details> -->
 
+      
       <details open>
+        <summary>2025-07-16</summary>
+
+        <div class="card">
+          <div class="card-title">Impostazioni Planner</div>
+          <div class="card-body">
+
+            <section>
+              <p>Sono cambiate le impostazioni del pianificatore, ora le impostazioni sono legate al tipo di calendario visualizzato</p>
+            </section>
+
+            <img src="../assets/pianificazione/impostazionipln.png" alt="Impostazioni Planner" width="650px">
+          </div>
+        </div>
+
+        
+        <div class="card">
+          <div class="card-title">Range date utili Planner</div>
+          <div class="card-body">
+
+            <section>
+              <p>Si puo' impostare il <strong>range di date utili</strong> per il planner</p>
+              <p>ovvero quelle che sono estese mentre le altre saranno ridotte o se impostate a zero nelle impostazioni nascoste</p>
+              <br>
+              <p>Per impostare il range di date utili per il planner, è necessario seguire questi passaggi:</p>
+              <ul>
+                <li>Nelle impostazioni mettere il range dal (ad esempio alle 8) e il range al (ad esempio alle 20)</li>
+                <li>Salvare le modifiche.</li>
+              </ul>
+              <p>Di default i valori sono -1 e 24 in modo che non cambi nulla a chi vuole mantenere le impostazioni originali.</p>
+            </section>
+
+            <img src="../assets/pianificazione/plannerridotto.png" alt="Impostazioni Planner" width="650px">
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-07-11</summary>
 
         <div class="card">
