Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -62,12 +62,28 @@
               <p>Per impostare il range di date utili per il planner, è necessario seguire questi passaggi:</p>
               <ul>
                 <li>Nelle impostazioni mettere il range dal (ad esempio alle 8) e il range al (ad esempio alle 20)</li>
+                <li>Si puo' impostare anche la dimensione delle <strong>ore ridotte</strong></li>
                 <li>Salvare le modifiche.</li>
               </ul>
               <p>Di default i valori sono -1 e 24 in modo che non cambi nulla a chi vuole mantenere le impostazioni originali.</p>
             </section>
 
-            <img src="../assets/pianificazione/plannerridotto.png" alt="Impostazioni Planner" width="650px">
+            <img src="../assets/pianificazione/plannerridotto.png" alt="Planner" width="650px">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Nuova assegnazione date viaggi</div>
+          <div class="card-body">
+
+            <section>
+              <p>Ora è possibile sincronizzare le date del viaggio in tutte le conferme contenute</p>
+              <p>Verranno aggiornate automaticamente in base alle modifiche delle date del viaggio e <strong>si aggiorneranno anche le madri</strong>.</p>
+              <br>
+              <p>C'e' anche la possibilità di riportare il vettore nella madre dalla tratta anche se lo sconsiglio fortemente dato che si potrebbero creare conflitti come ad esempio prezzi passivi doppi</p>
+            </section>
+
+            <img src="../assets/pianificazione/impostazioni-base-viaggifirst.png" alt="Impostazioni base" width="650px">
           </div>
         </div>
 
