Added new feature: "Azienda Abbinata" column in confirmations for better multi-company visibility

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -34,8 +34,23 @@
         </div>        
       </details> -->
 
-      
       <details open>
+        <summary>2025-07-17</summary>
+
+        <div class="card">
+          <div class="card-title">Aggiunta colonna Azienda Abbinata</div>
+          <div class="card-body">
+
+            <section>
+              <p>nelle conferme ora c'e' il campo <strong>Azienda Abbinata</strong> che puo' essere impostata dalle colonne, server per chi magari ha piu aziende e vuole vederle tutte insieme</p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      
+      <details>
         <summary>2025-07-16</summary>
 
         <div class="card">
