Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -47,6 +47,19 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Aggiunta mitt dest da preventivo</div>
+          <div class="card-body">
+
+            <section>
+              <p>Dai preventivi si possono aggiungere direttamente i mittenti destinatari da <strong>Aggiungi voce</strong></p>
+              <p>Da anche una serie di opzioni per definire il tipo e se associare al cliente</p>
+            </section>
+
+            <img src="../assets/preventivi/add-md.png" width="650px">
+          </div>
+        </div>
+
       </details>
 
       
