Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -60,6 +60,23 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Aggiunte colonne al km nei viaggi</div>
+          <div class="card-body">
+
+            <section>
+              <p>Nei viaggi sono state aggiunte colonne per il <strong>km</strong> e il <strong>costo</strong></p>
+              <p>Questo permette una visione piu' dettagliata dei costi e dei chilometri percorsi</p>
+              <p>Le colonne possono essere personalizzate in base alle esigenze dell'utente</p>
+              <p>Derivano dalle schede spese <strong>preventive</strong> e <strong>consuntive</strong></p>
+              <br>
+              <p> se non viene creata la scheda spese, saranno sempre a zero</p>
+            </section>
+
+            <img src="../assets/viaggi/colonne-alkm.png" width="650px">
+          </div>
+        </div>
+
       </details>
 
       
