Add internal repair documentation page for PTV Navigator installation
- Created a new HTML page detailing the process for handling internal repairs in a multi-company setup.
- Included instructions for activating the 'Create Confirmation' button in the repair module settings.
- Described the changes in the repair module interface when creating or modifying an internal repair.
- Explained the functionality of the confirmation generation and its relationship to the original repair.
- Added images to illustrate the process and interface changes.

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -38,6 +38,12 @@
         <summary>2025-07-17</summary>
 
         <div class="card">
+          <div class="card-body">
+            <p> <a href="./riparazione-interna.html">Riparazione Interna verso Conferme</a></p>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Aggiunta colonna Azienda Abbinata</div>
           <div class="card-body">
 
