Add new updates for July 17, 2025: Internal Repair link and Planner filter fix

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -36,10 +36,14 @@
 
       <details open>
         <summary>2025-07-17</summary>
-
+        
         <div class="card">
+          <div class="card-title">Riparazione Interna verso Conferme</div>
           <div class="card-body">
-            <p> <a href="./riparazione-interna.html">Riparazione Interna verso Conferme</a></p>
+
+            <section>
+              <p>Qui c'e' il <a href="./riparazione-interna.html">Link</a></p>
+            </section>
           </div>
         </div>
 
@@ -80,6 +84,17 @@
             </section>
 
             <img src="../assets/viaggi/colonne-alkm.png" width="650px">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Planner - risolto filtro impegno</div>
+          <div class="card-body">
+
+            <section>
+              <p>se visualizzate tutte le targhe nel planner, ora il filtro per impegno funziona correttamente</p>
+              <p>vantaggio collaterale: mi sembra anche piu veloce a caricare le targhe</p>
+            </section>
           </div>
         </div>
 
