Update modifications index for July 17, 2025

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -95,6 +95,16 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Numero civico nei preventivi</div>
+          <div class="card-body">
+
+            <section>
+              <p>nelle conferme ora c'e' il campo <strong>Numero Civico</strong> e anche nella finestra aggiungi punto</p>
+            </section>
+          </div>
+        </div>
+
       </details>
 
 
