Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,28 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-22</summary>
+        
+        <div class="card">
+          <div class="card-title">Nuova gestione poi</div>
+          <div class="card-body">
+
+            <section>
+              <p>Per chi ha tanti punti uguali nelle impostazioni del planner c'e' il nome tipo visualizzazione poi <strong>CLIENTE CONTEGGIO</strong></p>
+              <img src="../assets/pianificazione/cliconteggio.png" width="300px">
+            </section>
+
+            <section>
+              <p>Questo permette di visualizzare poi il rettangolo con i punti raggruppati</p>
+              <img src="../assets/pianificazione/cliconteggioRis.png" width="450px">
+            </section>
+          </div>
+        </div>
+
+
+      </details>
+
+      <details>
         <summary>2025-07-21</summary>
         
         <div class="card">
