--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,24 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-23</summary>
+        
+        <div class="card">
+          <div class="card-title">Suddivisione 12</div>
+          <div class="card-body">
+
+            <section>
+              <p>Nei <strong>Preventivi</strong> sotto impostazioni si puo' mettere che ci sia la suddivisione <strong>Base 12</strong> al posto di 13</p>
+              <p>Per l'attivazione basta attivare nelle impostazioni PREVENTIVO BASE 12</p>
+            </section>
+
+          </div>
+        </div>
+
+
+      </details>
+
+      <details>
         <summary>2025-07-22</summary>
         
         <div class="card">
