--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,24 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-24</summary>
+        
+        <div class="card">
+          <div class="card-title">DISATTIVA SALVATAGGIO TARGHE</div>
+          <div class="card-body">
+
+            <section>
+              <p>Se attivata nelle conferme, non salva piu' le targhe in anagrafica dalle conferme</p>
+            </section>
+
+          </div>
+        </div>
+
+
+      </details>
+
+
+      <details>
         <summary>2025-07-23</summary>
         
         <div class="card">
