Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -31,6 +31,18 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Storico prezzi nei viaggi</div>
+          <div class="card-body">
+
+            <section>
+              <p>Direttamente dai viaggi e' possibile vedere lo storico prezzi della madre</p>
+              <p>Si posiziona in automatico sulla madre</p>
+              <img src="../assets/viaggi/storicoprezziviaggio.png" width="300px">
+            </section>
+          </div>
+        </div>
+
 
       </details>
 
