Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,7 +17,24 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
-      <details open>
+            <details open>
+        <summary>2025-07-24</summary>
+        
+        <div class="card">
+          <div class="card-title">Modifica dati tecnici mezzi</div>
+          <div class="card-body">
+
+            <section>
+              <p>Nei mezzi ora c'e' il tasto per modificare direttamente i dati tecnici</p>
+              <img src="../assets/Veicoli/modifica.png" width="300px">
+              <p>E' anche stato aggiunto il campo <strong>Gruppi Mezzo</strong> che concatena i gruppi assegnati a quel mezzo</p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-07-24</summary>
         
         <div class="card">
