Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -22,6 +22,20 @@
         <summary>2025-07-28</summary>
 
         <div class="card">
+          <div class="card-title">Impostazione aggiornamento viaggi
+          </div>
+          <div class="card-body">
+
+            <section>
+              <p>Dalle impostazoni del planner è possibile attivare l'aggiornamento automatico dei viaggi quando si salva una tratta abbinata ad un viaggio</p>
+              <p>Questo permette ad esempio di impostare le data della conferma madre come durante l'abbinamento</p>
+
+              <img src="../assets/impostazioni/ElaborazioniViaggiDaOrdine.png" width="auto">
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Tabella abbinamento conferme e contaienrs ora hanno due impostazioni di colonne uniche
           </div>
           <div class="card-body">
