--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -17,6 +17,26 @@
     <section>
       <h2>🆕 Novità recenti</h2>
 
+      <details open>
+        <summary>2025-07-30</summary>
+
+        <div class="card">
+          <div class="card-title">Opzioni nel poi UC
+          </div>
+          <div class="card-body">
+
+            <section>
+              <p>Solo in questa visualizzare, con i poiUC visti cosi' ci sono le impostazioni dirette delle tratte</p>
+
+              <img src="../assets/pianificazione/opzioni-ret.png" width="auto">
+            </section>
+          </div>
+        </div>
+
+
+      </details>
+
+
 
       <details open>
         <summary>2025-07-28</summary>
@@ -27,7 +47,8 @@
           <div class="card-body">
 
             <section>
-              <p>Dalle impostazoni del planner è possibile attivare l'aggiornamento automatico dei viaggi quando si salva una tratta abbinata ad un viaggio</p>
+              <p>Dalle impostazoni del planner è possibile attivare l'aggiornamento automatico dei viaggi quando si
+                salva una tratta abbinata ad un viaggio</p>
               <p>Questo permette ad esempio di impostare le data della conferma madre come durante l'abbinamento</p>
 
               <img src="../assets/impostazioni/ElaborazioniViaggiDaOrdine.png" width="auto">
