Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,26 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-07-31</summary>
+
+        <div class="card">
+          <div class="card-title">Selezione multipla categorie PVIR
+          </div>
+          <div class="card-body">
+
+            <section>
+              <p>Ora ci possono essere piu categorie nel PVIR selezionabili contemporaneamente.</p>
+
+              <img src="../assets/pianificazione/categorieplanner.png" width="auto">
+
+              <p><strong>E' DA TESTARE BENE</strong></p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-07-30</summary>
 
         <div class="card">
