Add note to clarify category registration requirements

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -31,6 +31,7 @@
               <img src="../assets/pianificazione/categorieplanner.png" width="auto">
 
               <p><strong>E' DA TESTARE BENE</strong></p>
+              <p><strong>PS le categorie devono essere TUTTE DIVERSE quindi non registrare 2 volte MOTRICE ad esempio</strong></p>
             </section>
           </div>
         </div>
