Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -31,7 +31,24 @@
               <img src="../assets/pianificazione/categorieplanner.png" width="auto">
 
               <p><strong>E' DA TESTARE BENE</strong></p>
-              <p><strong>PS le categorie devono essere TUTTE DIVERSE quindi non registrare 2 volte MOTRICE ad esempio</strong></p>
+              <p><strong>PS le categorie devono essere TUTTE DIVERSE quindi non registrare 2 volte MOTRICE ad
+                  esempio</strong></p>
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-title">Riporta prezzo preventivo
+          </div>
+          <div class="card-body">
+
+            <section>
+              <p>Dalla sezione del ricarico del preventivo, con il tasto destro è possibile riportare il prezzo della
+                vendita</p>
+
+              <img src="../assets/preventivi/riporta-prezzo.png" width="350px">
+
+              <img src="../assets/preventivi/prezzo-preventivo.png" width="500px">
             </section>
           </div>
         </div>
