Add "Colonna azienda abbinata" section to the planner
- Introduced a new card section detailing the "Colonna azienda abbinata" feature in the planner.
- Included an image illustrating the feature.
- Added notes indicating that the feature is not retroactive and requires a realignment to take effect.

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -53,6 +53,22 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Colonna azienda abbinata
+          </div>
+          <div class="card-body">
+
+            <section>
+              <p>Nel planner c'e' la colonna per l'azineda abbinata</p>
+
+              <img src="../assets/pianificazione/azienda-abb-colonna.png" width="250px">
+
+              <p><strong>NON E' RETROATTIVA</strong></p>
+              <p>Perché lo sia bisogna far partire il riallineamento</p>
+            </section>
+          </div>
+        </div>
+
       </details>
 
       <details>
@@ -74,9 +90,7 @@
 
       </details>
 
-
-
-      <details open>
+      <details>
         <summary>2025-07-28</summary>
 
         <div class="card">
