--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Indice Documentazione</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!-- <div class="video-background">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet" />
+  <title>Indice Documentazione</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+  <!-- <div class="video-background">
       <iframe
         src="https://www.youtube.com/embed/aYYaezldnyI?autoplay=1&mute=1&controls=0&loop=1&playlist=aYYaezldnyI&modestbranding=1&showinfo=0&rel=0"
         frameborder="0"
@@ -23,89 +22,75 @@
       </iframe>
     </div> -->
 
-    <div class="container">
-      <header>
-        <h1>📚 Documentazione Elite</h1>
-        <p>Seleziona una sezione per iniziare</p>
-      </header>
+  <div class="container">
+    <header>
+      <h1>📚 Documentazione Elite</h1>
+      <p>Seleziona una sezione per iniziare</p>
+    </header>
 
-      <section>
-        <!-- la sezione delle novita che mi porta alla pagina delle novita -->
-        <!-- <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕 Sezione delle Novità</a></h2> -->
-        <button
-          onclick="window.location.href='./modifiche-fatte/modifiche-indice.html'"
-          class="bottone-novita"
-        >
-          🆕 Sezione delle Novità
-        </button>
-      </section>
+    <section>
+      <!-- la sezione delle novita che mi porta alla pagina delle novita -->
+      <!-- <h2><a href="./modifiche-fatte/modifiche-indice.html">🆕 Sezione delle Novità</a></h2> -->
+      <button onclick="window.location.href='./modifiche-fatte/modifiche-indice.html'" class="bottone-novita">
+        🆕 Sezione delle Novità
+      </button>
+    </section>
 
-      <section>
-        <h2>👨‍💼 Presentazione Software</h2>
-        <ul>
-          <li><a href="./ordini/demo-elite.html">🧑‍💻 Demo di Oscar</a></li>
-          <!-- Aggiungi altri collegamenti qui in futuro -->
-        </ul>
-      </section>
+    <section>
+      <h2>👨‍💼 Presentazione Software</h2>
+      <ul>
+        <li><a href="./ordini/demo-elite.html">🧑‍💻 Demo di Oscar</a></li>
+        <!-- Aggiungi altri collegamenti qui in futuro -->
+      </ul>
+    </section>
 
-      <section>
-        <h2>📖 Guida Elite</h2>
-        <ul>
-          <li>
-            <a href="./satellitari/satellitari-normies.html"
-              >📡 Sistema Satellitari</a
-            >
-          </li>
-          <!-- Aggiungi altri collegamenti qui in futuro -->
-          <li>
-            <a href="./ordini/inserire-un-ordine.html">📦 Gestione Ordini</a>
-          </li>
-          <li>
-            <a href="./containertrazioni/giuda-container.html"
-              >🔳 Gestione Container</a
-            >
-          </li>
-          <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
-          <li>
-            <a href="./pianificazione/gruppi-mezzi.html"
-              >🛣️ Gruppi pianificazione</a
-            >
-          </li>
-          <!-- Capitolo delle spese -->
-          <li><a href="./spese/indice-spese.html">💰 Gestione Spese</a></li>
+    <section>
+      <h2>📖 Guida Elite</h2>
+      <ul>
+        <li>
+          <a href="./satellitari/satellitari-normies.html">📡 Sistema Satellitari</a>
+        </li>
+        <!-- Aggiungi altri collegamenti qui in futuro -->
+        <li>
+          <a href="./ordini/inserire-un-ordine.html">📦 Gestione Ordini</a>
+        </li>
+        <li>
+          <a href="./containertrazioni/giuda-container.html">🔳 Gestione Container</a>
+        </li>
+        <!-- <li><a href="documentazione_viaggi.html">🛣️ Pianificazione Viaggi</a></li> -->
+        <li>
+          <a href="./pianificazione/gruppi-mezzi.html">🛣️ Gruppi pianificazione</a>
+        </li>
+        <!-- Capitolo delle spese -->
+        <li><a href="./spese/indice-spese.html">💰 Gestione Spese</a></li>
 
-          <li>
-            <a href="./API e Applicazioni/api-app-index.html"
-              >📡 API e Applicazioni</a
-            >
-          </li>
+        <li>
+          <a href="./API e Applicazioni/api-app-index.html">📡 API e Applicazioni</a>
+        </li>
 
-          <li><a href="./Deposito/deposito-logistico.html">🏭 Deposito</a></li>
-        </ul>
-      </section>
+        <li><a href="./Deposito/deposito-logistico.html">🏭 Deposito</a></li>
+      </ul>
+    </section>
 
-      <section>
-        <h2>📃 Altre cose da fare</h2>
-        <ul>
-          <li>
-            <a href="./cose-da-fare/test-grosso-cliente.html"
-              >Prove per cliente grosso</a
-            >
-          </li>
-          <!-- Aggiungi altri collegamenti qui in futuro -->
-        </ul>
-      </section>
+    <section>
+      <h2>📃 Altre cose da fare</h2>
+      <ul>
+        <li>
+          <a href="./cose-da-fare/test-grosso-cliente.html">Prove per cliente grosso</a>
+        </li>
+        <!-- Aggiungi altri collegamenti qui in futuro -->
+      </ul>
+    </section>
 
-      <section>
-        <h2>📖 Guide Aggiuntive</h2>
-        <ul>
-          <li>
-            <a href="./ordini/configurazione-cap-esteri.html"
-              >🌍 Configurazione Cap Esteri</a
-            >
-          </li>
-        </ul>
-      </section>
-    </div>
-  </body>
+    <section>
+      <h2>📖 Guide Aggiuntive</h2>
+      <ul>
+        <li>
+          <a href="./ordini/configurazione-cap-esteri.html">🌍 Configurazione Cap Esteri</a>
+        </li>
+      </ul>
+    </section>
+  </div>
+</body>
+
 </html>
