Add card for category selection settings in recent updates

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,6 +21,21 @@
         <summary>2025-07-31</summary>
 
         <div class="card">
+          <div class="card-title">Categorie PVIR</div>
+          <div class="card-body">
+
+            <section>
+              <p>Messa spunta nelle impostazioni per scegliere se voglio la combo o n categorie</p>
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
+        <summary>2025-07-31</summary>
+
+        <div class="card">
           <div class="card-title">Selezione multipla categorie PVIR
           </div>
           <div class="card-body">
