Update recent changes date and add clarification note for category selection settings

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,7 +18,7 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
-        <summary>2025-07-31</summary>
+        <summary>2025-08-18</summary>
 
         <div class="card">
           <div class="card-title">Categorie PVIR</div>
@@ -26,6 +26,7 @@
 
             <section>
               <p>Messa spunta nelle impostazioni per scegliere se voglio la combo o n categorie</p>
+              <p>guardare la moridica del 2025-07-31 per capire di cosa parlo</p>
             </section>
           </div>
         </div>
