Fix typo in clarification note for category selection settings

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -26,7 +26,7 @@
 
             <section>
               <p>Messa spunta nelle impostazioni per scegliere se voglio la combo o n categorie</p>
-              <p>guardare la moridica del 2025-07-31 per capire di cosa parlo</p>
+              <p>guardare la modifica del 2025-07-31 per capire di cosa parlo</p>
             </section>
           </div>
         </div>
