4792: Impostazione dataC Pedane

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -31,6 +31,20 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Nuova impostazione pedane - Data registrazione pedane</div>
+          <div class="card-body">
+
+            <section>
+              <p>Messa spunta nelle impostazioni per scegliere se voglio impostare la data della registrazione della
+                pedana come la DataC dell'ordine</p>
+              <img src="../assets/Pedane/DataRegistrazioneComeDataC.png" width="auto">
+              <small>Essendo presenti più impostazioni, assicurarsi che solamente quella desiderata sia attiva
+              </small>
+            </section>
+          </div>
+        </div>
+
       </details>
 
       <details>
