--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -25,12 +25,16 @@
           <div class="card-body">
 
             <section>
-              <p>Per come sono state create le anagrafiche nella tabella Autisti ora abbiamo le voci Autista, Dipendente, Magazziniere, Meccanico che sono gestiti da codice e filtrati nei vari moduli e in stampe. 
-                  Il metodo corretto sarebbe aver un’anagrafica Dipendenti dove all’interno si distinguono le mansioni (autista, impiegato , …): visto che ad ora non possiamo modificare tutto un alternativa è quella di poter definire la Mansione in un nuovo campo collegato ad una lista personalizzabile.
-                </p>
+              <p>Per come sono state create le anagrafiche nella tabella Autisti ora abbiamo le voci Autista,
+                Dipendente, Magazziniere, Meccanico che sono gestiti da codice e filtrati nei vari moduli e in stampe.
+                Il metodo corretto sarebbe aver un’anagrafica Dipendenti dove all’interno si distinguono le mansioni
+                (autista, impiegato , …): visto che ad ora non possiamo modificare tutto un alternativa è quella di
+                poter definire la Mansione in un nuovo campo collegato ad una lista personalizzabile.
+              </p>
               <img src="../assets/anagrafiche/dipendenti/mansione01.png" width="auto">
-              <small>Poi questo campo, se serve, può essere riportato nella griglia di ricerca e si può utilizzare il flag “Escludi Ruolo” che permette di visualizzare tutte le righe senza distinzione di ruolo.
-              </small>
+              <p>Poi questo campo, se serve, può essere riportato nella griglia di ricerca e si può utilizzare il flag
+                “Escludi Ruolo” che permette di visualizzare tutte le righe senza distinzione di ruolo.
+              </p>
               <img src="../assets/anagrafiche/Dipendenti/mansione02.png" width="auto">
             </section>
           </div>
