--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,26 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-19</summary>
+
+        <div class="card">
+          <div class="card-title">Km a vuoto auto</div>
+          <div class="card-body">
+
+            <section>
+              <p>Se attivato nelle impostazioni di ptv i km tra punto operazione e qualsiasi altro punto vengono
+                considerati vuoti</p>
+              <img src="../assets/impostazioni/impostaptv.png" width="auto">
+
+              <p>nei viaggi bisogna attivare la visione dei km a vuoto sotto le impostazioni</p>
+            </section>
+          </div>
+        </div>
+
+
+      </details>
+
+      <details>
         <summary>2025-08-18</summary>
 
         <div class="card">
