Refactor code structure for improved readability and maintainability

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -34,6 +34,17 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Date Viaggio in base al percorso</div>
+          <div class="card-body">
+
+            <section>
+              <p>Se attivata l'impostazione le date del viaggio saranno regolate in base al percorso</p>
+              <img src="../assets/impostazioni/impostadateauto.png" width="auto">
+            </section>
+          </div>
+        </div>
+
 
       </details>
 
