Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,21 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-20</summary>
+
+        <div class="card">
+          <div class="card-title">Salva singola riga</div>
+          <div class="card-body">
+
+            <section>
+              <p>Se attiva la modifica delle conferme nella griglia si puo' salvare la singola riga</p>
+              <img src="../assets/conferme/salvadatisingola.png" width="auto">
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-08-19</summary>
 
         <div class="card">
