Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -26,10 +26,22 @@
 
             <section>
               <p>Se attiva la modifica delle conferme nella griglia si puo' salvare la singola riga</p>
-              <img src="../assets/conferme/salvadatisingola.png" width="auto">
+              <img src="../assets/conferme/salvadatisingola.png" width="400">
             </section>
           </div>
         </div>
+      </details>
+
+      <div class="card">
+        <div class="card-title">Invio Viaggio Manuale da ricerca</div>
+        <div class="card-body">
+
+          <section>
+            <p>Dal modulo dei viaggi si possono rendere disponibili i viaggi per l'app con il tasto destro</p>
+            <img src="../assets/viaggi/inviaappricerca.png" width="300">
+          </section>
+        </div>
+      </div>
       </details>
 
       <details>
