--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,21 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-21</summary>
+
+        <div class="card">
+          <div class="card-title">Cerca Impostazioni</div>
+          <div class="card-body">
+
+            <section>
+              <p>FINALMENTE ho messo il cerca nelle impostazioni del planner</p>
+              <img src="../assets/pianificazione/impostazioniplncerca.png" width="400">
+            </section>
+          </div>
+        </div>
+      </details>
+
+      <details>
         <summary>2025-08-20</summary>
 
         <div class="card">
@@ -26,22 +41,21 @@
 
             <section>
               <p>Se attiva la modifica delle conferme nella griglia si puo' salvare la singola riga</p>
-              <img src="../assets/conferme/salvadatisingola.png" width="400">
+              <img src="../assets/conferme/salvadatisingola.png" width="auto">
             </section>
           </div>
         </div>
-      </details>
 
-      <div class="card">
-        <div class="card-title">Invio Viaggio Manuale da ricerca</div>
-        <div class="card-body">
+        <div class="card">
+          <div class="card-title">Invio Viaggio Manuale da ricerca</div>
+          <div class="card-body">
 
-          <section>
-            <p>Dal modulo dei viaggi si possono rendere disponibili i viaggi per l'app con il tasto destro</p>
-            <img src="../assets/viaggi/inviaappricerca.png" width="300">
-          </section>
+            <section>
+              <p>Dal modulo dei viaggi si possono rendere disponibili i viaggi per l'app con il tasto destro</p>
+              <img src="../assets/viaggi/inviaappricerca.png" width="300">
+            </section>
+          </div>
         </div>
-      </div>
       </details>
 
       <details>
