Implement code changes to enhance functionality and improve performance

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,6 +21,18 @@
         <summary>2025-08-21</summary>
 
         <div class="card">
+          <div class="card-title">Generazione Numero DDT personalizzato</div>
+          <div class="card-body">
+
+            <section>
+              <p>Nel modulo conferme, richiesto da un cliente, genera un numero DDT formato AA00000 facendo distinzione per Cliente+Sede e anno</p>
+              <img src="../assets/conferme/impostazionenumeroddt.png" width="400">
+            </section>
+          </div>
+        </div>
+      </details>
+
+        <div class="card">
           <div class="card-title">Cerca Impostazioni</div>
           <div class="card-body">
 
