--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,11 +21,23 @@
         <summary>2025-08-21</summary>
 
         <div class="card">
+          <div class="card-title">Chiusura Scadenze</div>
+          <div class="card-body">
+
+            <section>
+              <p>Dalla lista scadenze è possibile selezionare una o più righe, con il tasto DX in una delle righe selezionate compare la richiesta di chiusura delle scadenze selezionate. La data di chiusura di tutte le scadenze sarà la data odierna</p>
+              <img src="../assets/Scadenze/chiusura scadenze.png" width="400">
+            </section>
+          </div>
+        </div>
+      </details>
+
+        <div class="card">
           <div class="card-title">Generazione Numero DDT personalizzato</div>
           <div class="card-body">
 
             <section>
-              <p>Nel modulo conferme, richiesto da un cliente, genera un numero DDT formato AA00000 facendo distinzione per Cliente+Sede e anno</p>
+              <p>Nel modulo conferme, richiesto da un cliente, genera un numero DDT formato AA00000 facendo distinzione per Cliente+Sede e anno. Il tasto è attivabile dalle impostazioni</p>
               <img src="../assets/conferme/impostazionenumeroddt.png" width="400">
             </section>
           </div>
