Add new feature for national limitations control and update existing card descriptions

--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -21,28 +21,46 @@
         <summary>2025-08-21</summary>
 
         <div class="card">
+          <div class="card-title">Controllo Limitazioni Nazionali</div>
+          <div class="card-body">
+
+            <section>
+              <p>Dal 1/10/2025 in Francia non possono piu transitare i mezzi immatricolati prima del 2014</p>
+              <br>
+              <p>Ho previsto una struttura nell'abbinamento del planner che tenga conto di queste limitazioni.</p>
+              <p>Se si va in francia</p>
+              <ul>
+                <li>Il mezzo deve essere immatricolato dopo del 2014</li>
+                <li>Il mezzo deve essere minimo Euro 6</li>
+              </ul>
+            </section>
+          </div>
+        </div>
+
+        <div class="card">
           <div class="card-title">Chiusura Scadenze</div>
           <div class="card-body">
 
             <section>
-              <p>Dalla lista scadenze è possibile selezionare una o più righe, con il tasto DX in una delle righe selezionate compare la richiesta di chiusura delle scadenze selezionate. La data di chiusura di tutte le scadenze sarà la data odierna</p>
+              <p>Dalla lista scadenze è possibile selezionare una o più righe, con il tasto DX in una delle righe
+                selezionate compare la richiesta di chiusura delle scadenze selezionate. La data di chiusura di tutte le
+                scadenze sarà la data odierna</p>
               <img src="../assets/Scadenze/chiusura scadenze.png" width="400">
             </section>
           </div>
         </div>
-      </details>
 
         <div class="card">
           <div class="card-title">Generazione Numero DDT personalizzato</div>
           <div class="card-body">
 
             <section>
-              <p>Nel modulo conferme, richiesto da un cliente, genera un numero DDT formato AA00000 facendo distinzione per Cliente+Sede e anno. Il tasto è attivabile dalle impostazioni</p>
+              <p>Nel modulo conferme, richiesto da un cliente, genera un numero DDT formato AA00000 facendo distinzione
+                per Cliente+Sede e anno. Il tasto è attivabile dalle impostazioni</p>
               <img src="../assets/conferme/impostazionenumeroddt.png" width="400">
             </section>
           </div>
         </div>
-      </details>
 
         <div class="card">
           <div class="card-title">Cerca Impostazioni</div>
