--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -18,6 +18,25 @@
       <h2>🆕 Novità recenti</h2>
 
       <details open>
+        <summary>2025-08-25</summary>
+
+        <div class="card">
+          <div class="card-title">Gap ricerca viaggio</div>
+          <div class="card-body">
+
+            <section>
+              <p>Reintrodotto il campo che permette di personalizzare la ricerca dei viaggi in quanti giorni nel pvir
+              </p>
+              <p>Ad esempio se imposto il valore a 5 quando abbino il viaggio guarda se posso inserirlo fino a 5 giorni
+                prima della partenza in viaggi esistenti</p>
+              <img src="../assets/pianificazione/gapricerca.png" width="400">
+            </section>
+          </div>
+        </div>
+
+      </details>
+
+      <details>
         <summary>2025-08-22</summary>
 
         <div class="card">
@@ -26,10 +45,18 @@
 
             <section>
               <p>Nuovo campo Proprietario nell'anagrafica mezzi:</p>
-              <p>Il campo nasce dall'esigenza di alcune aziende che hanno il multi aziendale per differenziare l'effettivo proprietario del mezzo e che azienda invece lo usa, questo comporta nuove disposizioni nella gestione del modulo noleggi, nella gestione delle spese del mezzo e nel modulo della fatturazione interna.</p>
-              <p>-Noleggio: se un mezzo fa parte delle proprietà della prima azienda, ma viene usato nella seconda allora nel campo proprietario troveremo azienda 1 e campo azienda abbinata troveremo azienda 2.</p>
-              <p>-Fatturazione Interna: se il mezzo è di proprietà dell'azienda 1 ma abbinato a azienda 2, se azienda 1 vende un viaggio a azienda 2 allora comunque dovrà scaturire la fatturazione interna, perchè azienda 2 paga un nolo a azienda 1 e quindi per il periodo del nolo il mezzo avendo azienda abbinata 2 si comporterà di conseguenza.</p>
-              <p>-Spese: solo le spese di nolo devono essere attribuite a azienda abbinata nel caso che azienda proprietà e azienda abbinata siano diverse, le altre spese sono spese mezzi del azienda proprietaria</p>
+              <p>Il campo nasce dall'esigenza di alcune aziende che hanno il multi aziendale per differenziare
+                l'effettivo proprietario del mezzo e che azienda invece lo usa, questo comporta nuove disposizioni nella
+                gestione del modulo noleggi, nella gestione delle spese del mezzo e nel modulo della fatturazione
+                interna.</p>
+              <p>-Noleggio: se un mezzo fa parte delle proprietà della prima azienda, ma viene usato nella seconda
+                allora nel campo proprietario troveremo azienda 1 e campo azienda abbinata troveremo azienda 2.</p>
+              <p>-Fatturazione Interna: se il mezzo è di proprietà dell'azienda 1 ma abbinato a azienda 2, se azienda 1
+                vende un viaggio a azienda 2 allora comunque dovrà scaturire la fatturazione interna, perchè azienda 2
+                paga un nolo a azienda 1 e quindi per il periodo del nolo il mezzo avendo azienda abbinata 2 si
+                comporterà di conseguenza.</p>
+              <p>-Spese: solo le spese di nolo devono essere attribuite a azienda abbinata nel caso che azienda
+                proprietà e azienda abbinata siano diverse, le altre spese sono spese mezzi del azienda proprietaria</p>
               <img src="../assets/anagrafiche/ProprietaMezzo.png" width="400">
             </section>
           </div>
