--- a/modifiche-fatte/modifiche-indice.html
+++ b/modifiche-fatte/modifiche-indice.html
@@ -34,6 +34,18 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-title">Duplica POI</div>
+          <div class="card-body">
+
+            <section>
+              <p>Dai viaggi posso duplicare il punto per farlo diventare un operazione per calcolare eventuali km a
+                vuoto</p>
+              <img src="../assets/viaggi/duplicapoi.png" width="400">
+            </section>
+          </div>
+        </div>
+
       </details>
 
       <details>
